--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <button id="first-btn">add</button>
       </div>
       <div class="bottom" id="expense">
-      <h3>total expense</h3>
-      <h4>total:0</h4>
-      </div>
+  <h3>Current Balance</h3>
+  <h4 id="total-display">$0</h4>
+</div>
     </div>
   </div>
   
